@@ -3,6 +3,9 @@ cdebconf (0.80) UNRELEASED; urgency=low
   * Colin Watson
     - Stop hardcoding configdb and templatedb in stack database
       initialisation.
+    - Use question_db_new instance parameter in debconf-copydb and
+      debconf-dumpdb rather than messing with the DEBCONF_CONFIG environment
+      variable.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 15 Jun 2005 16:16:34 +0100
 
